# CV-Creator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: generate_curriculum.py  temp_cv.html
src/data/: curriculum.json  curriculum_it.json
src/templates/: curriculum.html
