[tool.poetry]
name = "cv-creator"
version = "0.1.0"
description = ""
authors = ["gio-del <giovanni.delucia@polimi.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pdfkit = ">=1.0.0,<1.1.0"
jinja2 = ">=3.1.3,<3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
